# agentic-rag

./: .env.example  .gitignore  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-ROADMAP.md  v1.1-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-AUDIT.md  v1.2-REQUIREMENTS.md  v1.3-AUDIT.md  v1.3-REQUIREMENTS.md
.planning/research/: SUMMARY.md
.specstory/: .project.json
.specstory/history/: 2026-03-20_15-41-39Z-gemini-session.md  2026-03-20_15-41-52Z-create-git-ignore-for.md  2026-03-20_15-41-52Z-gemini-session.md
design-system/agentic-rag/: MASTER.md
docs/plans/: 2026-03-20-agentic-rag-design.md  2026-03-20-phase-2-mem0-integration.md  2026-03-21-phase-3-document-ingestion.md  2026-03-21-phase-4-rag-flow.md  2026-03-21-phase-5-oauth.md  2026-03-21-phase-6-tool-extensions.md  2026-03-22-phase-10-admin-chatbot-builder.md  2026-03-22-phase-11-sse-streaming-chat.md  2026-03-22-phase-12-multi-provider-llm.md  2026-03-22-phase-13-user-management-rbac.md  2026-03-22-phase-14-document-crud.md  2026-03-22-phase-15-api-polish.md  2026-03-22-phase-7-frontend-scaffold.md  2026-03-22-phase-8-user-chat-interface.md  2026-03-22-phase-9-admin-kb-management.md  2026-03-23-phase-16-api-key-management.md  2026-03-23-phase-17-kb-usage-analytics.md  (+1 more)
frontend/: package-lock.json  package.json  vite.config.js
src/: main.py
tests/: conftest.py  test_agent.py  test_api.py  test_auth.py  test_crypto.py  test_ingestion.py  test_llm_adapters.py  test_rbac.py  test_retriever.py  test_tool_registry.py
(+81 files in other folders)
